Correções de layout

--- a/empresasParceiras.html
+++ b/empresasParceiras.html
@@ -41,7 +41,7 @@
                         <article>
                             <a href="https://www.instagram.com/buenoizakaya/?hl=pt-br" target="_blank" class="image"><img src="images/Empresas Parceiras/bueno.png" alt="" /></a>
                             <h3>Restaurante Bueno Izakaya </h3>
-                            <h4>Insatagram:
+                            <h4>Instagram:
                                 <a href="https://www.instagram.com/buenoizakaya/?hl=pt-br" class="icon brands fa-instagram" target="_blank"></a>
                             </h4>
                             <p>Espaço aconchegante e descontraído com capacidade para 100 pessoas, onde a cultura e a tradição da comida japonesa e coreana são servidas no mais alto estilo seguindo os temperos e aromas típicos da comida asiática.</p>
@@ -68,7 +68,8 @@
                             <h3>Porte, Engenharia e Urbanismo</h3>
                             <h4>Site:<a href="https://porte.com.br/" target="_blank">Clique aqui</a></h4>
                             <p>A Porte, empresa de engenharia e urbanismo, está no mercado desde 1986 a serviço do desenvolvimento humano, criando e entregando soluções urbanas. Juntos, Porte e cidade, promovem o desenvolvimento humano por meio da transformação
-                                urbana.</p>
+                                urbana.
+                            </p>
                             <p id="empresa3Texto" style="display: none;"> A empresa procura identificar, atender e fortalecer as necessidades do sistema de gestão, para além da construção de moradias, e assim poder contribuir com a educação, a cultura e a saúde da população que a Porte atende. Desta
                                 forma, constrói hospital, centro de convivência e apoia empresas e pessoas ligadas à arte, à educação, à saúde e à saúde mental. O cidadão, para morar bem, precisa ter espaços de lazer e convivência, cuidados com o corpo
                                 e a saúde, relacionamento humano e afetivo. </p>
@@ -79,11 +80,14 @@
                         <article>
                             <a href="https://www.instagram.com/tecopaisagismo/?hl=pt-br" class="image" target="_blank"><img src="images/Empresas Parceiras/teco.png" alt="" /></a>
                             <h3>Teco Paisagismo </h3>
-                            <h4>Insatagram:
+                            <h4>Instagram:
                                 <a href="https://www.instagram.com/tecopaisagismo/?hl=pt-br" class="icon brands fa-instagram" target="_blank"></a>
                             </h4>
                             <p>A TECO Paisagismo é uma empresa de arquitetura e paisagismo que tem como principais ideais a viabilidade e a modernidade em suas implementações. </p>
-                            <p id="empresa4Texto" style="display: none;">Atua nas mais variadas escalas e busca objetividade em suas composições, adequando-as para um mundo cada vez mais tecnológico e sustentável. </p>
+
+                            <p id="empresa4Texto" style="display: none;">Atua nas mais variadas escalas e busca objetividade em suas composições, adequando-as para um mundo cada vez mais tecnológico e sustentável.<br/>Como a arte do paisagismo tem a capacidade de transformar espaços livres e modificar
+                                a vida das pessoas, a empresa acredita na inter-relação mundo interno e externo. Como o ambiente e a atmosfera fazem uma diferença para o mundo interno da pessoa, assim como a importância dos cuidados com o mundo psíquico
+                                para conseguir saborear melhor os espaços e as situações cotidianas que são apresentadas à cada um de nós. </p>
                             <ul class="actions">
                                 <li><a id="empresa4Botao" class="button">Mais</a></li>
                             </ul>
@@ -92,7 +96,7 @@
                             <a href="https://www.instagram.com/bsmotorsma/?hl=pt-br" class="image" target="_blank"><img src="images/Empresas Parceiras/bsmotors.png" alt="" /></a>
                             <h3>BS Motors </h3>
                             <h4>Site:<a href="www.bsmotorsma.com" target="_blank">Clique aqui</a></h4>
-                            <h4>Insatagram:
+                            <h4>Instagram:
                                 <a href="https://www.instagram.com/bsmotorsma/?hl=pt-br" class="icon brands fa-instagram" target="_blank"></a>
                             </h4>
                             <p>BS Motors is dedicated to providing the ultimate automobile buying experience. BS Motors is your #1 source for buying a quality pre-owned vehicles. They have extensive relationships in the dealer community </p>
@@ -114,9 +118,64 @@
                                 <li><a id="empresa6Botao" class="button">Mais</a></li>
                             </ul>
                         </article>
+                        <article>
+                            <a href="https://www.instagram.com/barrancodovalle/?hl=pt-br" class="image" target="_blank"><img src="images/Empresas Parceiras/barrancodovalle.jpg" alt="" /></a>
+                            <h3> Barranco do Valle, Antiquário e Restauro. </h3>
+                            <h4>Instagram:
+                                <a href="https://www.instagram.com/barrancodovalle/?hl=pt-br" class="icon brands fa-instagram" target="_blank"></a>
+                            </h4>
+
+                            <p>Compra, venda e restauro de peças novas e antigas. As histórias, as memórias, as heranças de nossos antepassados são relíquias que devem ser cuidadas, preservadas e fazer parte do dia a dia dos netos, bisnetos e tataranetos
+                                que hoje estão no século XXI. </p>
+                            <p id="empresa7Texto" style="display: none;"> Conservar as raízes e a cultura de um povo, de uma nação, é mantê-la viva e, mesmo acompanhando as grandes conquistas científicas e a evolução tecnológica, podemos preservar um espaço para a arte e a cultura que veio antes
+                                de nós. Assim como as cidades modernas crescem por entre belas construções arquitetônicas históricas e preservadas, objetos novos e modernos merecem conviver lado a lado e fazer parte de nossas vidas... Não jogue fora.
+                                Preserve, restaure, mantenha um pedaço querido do passado, de sua história, ao seu lado. </p>
+                            <ul class="actions">
+                                <li><a id="empresa7Botao" class="button">Mais</a></li>
+                            </ul>
+                        </article>
+                        <article>
+                            <a href="http://www.ocpr.com.br" class="image" target="_blank"><img src="images/Empresas Parceiras/ocpr.png" alt="" /></a>
+                            <h3> OCPR</h3>
+                            <h4>Site:<a href="http://www.ocpr.com.br" target="_blank">Clique aqui</a></h4>
+
+                            <p>Fundada em 1994 na cidade de São Paulo, a OCPR começou suas atividades em assessoria fiscal, jurídica e contábil.
+                            </p>
+                            <p id="empresa8Texto" style="display: none;"> Investindo sempre no aperfeiçoamento de seus serviços, afim de atender as novas tendências do mercado, e as necessidades de seus clientes, a OCPR se especializou em prover soluções eficientes. Todos os seus serviços são elaborados
+                                dentro dos mais altos padrões de qualidade, por uma equipe de profissionais altamente qualificada e treinada. Tem como missão satisfazer as expectativas de seus clientes, surpreender positivamente, atuando de maneira ética,
+                                transparente, primando pela excelência.<br> A OCPR, sobretudo, aposta em empresas com os mesmos valores éticos que primam pela excelência em sua missão. </p>
+                            <ul class="actions">
+                                <li><a id="empresa8Botao" class="button">Mais</a></li>
+                            </ul>
+                        </article>
+                        <article></article>
                     </div>
                 </section>
-
+                <section>
+                    <header>
+                        <h2 style="color:#987F42;">APOIO<br /></h2><br />
+                    </header>
+                    <h3>Jonas Ratti
+                        <a href="https://www.instagram.com/rattijonassampaio/?hl=pt-br" class="icon brands fa-instagram" target="_blank"></a>
+                    </h3>
+                    <img class="image" src="images/Quem Somos/jonas ratti.jpeg" alt="" />
+                    <p>
+                        Jonas Ratti, após jogar futebol recreativo por longos anos, teve contusões que o impossibilitaram de continuar nesse esporte. Assim, em 2002 aos 55 anos voltou-se para a arte da equitação. Começou a andar a cavalo por recreação e lazer, dedicou-se às
+                        aulas e as oportunidades no mundo do enduro começaram a aparecer. Desde 2004 participa de campeonatos Paulista, Paranaense, Mineiro, Brasiliense e Brasileiro, pegando muitos pódios e por vezes sendo campeão nas modalidades: 60
+                        km velocidade e 40km regularidade. Jonas acredita que o incentivo familiar, o contato com os amigos que os treinos e os enduros proporcionam e o cuidado com a saúde mental são a fórmula para ele se manter um verdadeiro atleta e
+                        fazer da terceira idade um momento de crescimento e conquistas.
+                    </p>
+                    <hr class="major" />
+                    <h3>Lucas Ratti
+                    </h3>
+                    <img class="image" src="images/Quem Somos/lucas ratti.jpeg" alt="" />
+                    <p>
+                        Lucas Ratti desde criança ama jogar futebol e essa paixão foi acolhida pelos pais que o levavam primeiro aos jogos e depois aos treinos. Então ele começou a se destacar e assim a vida no futebol passou a ficar ainda mais séria. Lucas, sempre muito responsável
+                        com os estudos, conseguiu coadunar estudo, jogo e os encontros em família. Ele acredita que foi exatamente a estabilidade emocional e apoio que encontrou na família, a disciplina e a paixão pelo futebol que o levaram longe, hoje
+                        jogando na Itália pela Juventus. Dessa forma, Lucas Rosa apoia instituições que trabalham por sonhos e projetos, acredita que cada brasileiro tem o direito de lutar com esforço e confiança pelas suas próprias conquistas. Fortalecimento
+                        emocional e confiança pessoal são partes imprescindíveis para as conquistas e realização de sonhos.
+                    </p>
+                </section>
             </div>
         </div>
 
