--- a/index.html
+++ b/index.html
@@ -50,18 +50,17 @@
                     </div>
                     <span class="image object">
 						<img src="images/index1.png" alt="" />
-						<a href="images/index1.png">acessar</a>mais
 					</span>
                 </section>
                 <section id="banner">
                     <div class="content">
                         <header>
-                            <h3 style="color:#987F42;">REDE DE ATENDIMENTO <br /> PSICANALÍTICO UNBEWUSSTE</h3>
+                            <h3 style="color:#987F42;">GRUPO DE ESTUDOS: <br /> PERVERSÕES EM DEBATE</h3>
+                            <h5>psicanálise de Freud a Lacan</h5>
                         </header>
                         <p>
-                            A primeira Rede de atendimento Unbewusste oferece atendimento psicanalítico individual semanal, é direcionada para pessoas que têm empresas, que trabalham em empresas ou querem montar sua empresa. Outras Redes serão montadas de acordo com a procura. Atendemos
-                            crianças, adolescentes, adultos, terceira idade. À medida que esta procura for excedendo, vamos aumentando o número de Redes UNBEWUSSTE borromeana.
-
+                            <b>Psicanalista:</b> Fabiana Ratti<br/> <b>Assistentes:</b> Jessica Olivieri e Guilherme Figueiredo<br/> Toda sexta feira – a partir de 6 de março de 2020 das 14h às 15:30h.<br/> Local: Rua Cônego Eugênio Leite, 933 cj 75.
+                            Pinheiros. SP.<br/> whtasapp: 11999558857<br/> insta: fabianaratti <br/>
                         </p>
                     </div>
                     <span class="image object">
