--- a/redeAtendimento.html
+++ b/redeAtendimento.html
@@ -108,6 +108,11 @@
 
 
                     </p>
+                    <object width="1024" height="768">
+						<param name="movie" value="http://www.youtube.com/v/OkxP50V0DEA" />
+						<embed src="http://www.youtube.com/v/OkxP50V0DEA" type="application/x-shockwave-flash"
+							width="1024" height="768" />
+					</object>
             </div>
         </div>
 
