--- a/acompanhanteTerapeutico.html
+++ b/acompanhanteTerapeutico.html
@@ -48,7 +48,8 @@
                         </p>
                     </div>
                     <div>
-                        <form method="post" action="#">
+                        <form method="post" action="assets/php/formularioPadrao.php">
+                            <input type="hidden" id="tipoFormulario" name="tipoFormulario" value="Acompanhante Terapêutico">
                             <div class="row gtr-uniform">
                                 <div class="col-6 col-12-xsmall">
                                     <input type="text" name="nome" id="nome" value="" placeholder="Nome">
@@ -64,7 +65,7 @@
                                 </div>
                                 <div class="col-12">
                                     <ul class="actions">
-                                        <li><input type="submit" value="Enviar" class="Enviar"></li>
+                                        <li><input type="submit" value="Enviar" class="Enviar" name="btnEnviar"></li>
                                     </ul>
                                 </div>
                             </div>
@@ -105,7 +106,7 @@
                         <h2>Contato</h2>
                     </header>
                     <ul class="contact">
-                        <li class="icon solid fa-envelope"><a href="#">fabianaratti@gmail.com</a></li>
+                        <li class="icon solid fa-envelope"><a href="#">fabiana@fabianaratti.com.br</a></li>
                         <li class="icon solid fa-phone">(11) 99955-8857</li>
                         <li class="icon solid fa-home">R. Cônego Eugênio Leite, 933<br />conjunto 75 - Pinheiros<br /> São Paulo, CEP: 05414-012</li>
                     </ul>
