--- a/biblioteca.html
+++ b/biblioteca.html
@@ -153,7 +153,7 @@
                     </header>
                     <ul class="contact">
                         <ul class="contact">
-                            <li class="icon solid fa-envelope"><a href="#">fabianaratti@gmail.com</a></li>
+                            <li class="icon solid fa-envelope"><a href="#">fabiana@fabianaratti.com.br</a></li>
                             <li class="icon solid fa-phone">(11) 99955-8857</li>
                             <li class="icon solid fa-home">R. Cônego Eugênio Leite, 933 <br />conjunto 75 - Pinheiros
                                 <br /> São Paulo, CEP: 05414-012</li>
