--- a/quemSomos.html
+++ b/quemSomos.html
@@ -71,7 +71,7 @@
                     <h3>Raquel Pereira – Responsável pelo setor administrativo e planilhamento de fluxo de pacientes para os psicanalistas da Rede Unbewusste.
                         <a href="https://www.linkedin.com/in/raquel-pereira-89b60113/" class="icon brands fa-linkedin"></a>
                     </h3>
-                    <img class="image" src="images/pic08.jpg" alt="" />
+                    <img class="image" src="images/Quem Somos/Raquel Pereira.jpg" alt="" />
                     <p>
                         Raquel Pereira está no mundo administrativo e das finanças desde 2000. Trabalhou 8 anos no mercado financeiro até que montou sua própria empresa de consultoria para dar assessoria e suporte a empresas que tenham o seu perfil e que vendam o produto no
                         qual acredita. Os psicanalistas Lacaniano envoltos por entre sentimentos, pensamentos, livros intelectuais, dissertações e teses, casos graves, internações e tentativas de suicídio, Raquel Pereira consegue, com cautela e inteligência,
@@ -87,7 +87,7 @@
                         <h2 style="color:#987F42;">SETOR DE MARKETING<br /></h2><br /><br />
                     </header>
                     <h3>Wilson Takeuchi – É responsável pela construção do site, das redes sociais e da produção de conteúdo para divulgação da Rede. </h3>
-                    <img class="image" src="images/pic08.jpg" alt="" />
+                    <img class="image" src="images/Quem Somos/Wilson Takeuchi.jpg" alt="" />
                     <p>
                         Wilson Takeuchi é formado pelas Artes Plásticas na FAAP há 30 anos. Por vinte anos trabalhou no setor de marketing de agência de publicidade chegando a Diretor de Arte e então saiu para ter sua própria empresa de artes.<br /> Com
                         sua sensibilidade artística, cultura e senso estético propôs que incluíssemos na arte do site a lógica borromeana apresentada por Jacques Lacan em que somos todos atravessados pelo real, simbólico e imaginário. Só temos acesso
@@ -99,7 +99,7 @@
                         <h2 style="color:#987F42;">FACILITADOR DE CONTATO<br /></h2><br /><br />
                     </header>
                     <h3>Rodrigo Gouveia </h3>
-                    <img class="image" src="images/pic08.jpg" alt="" />
+                    <img class="image" src="images/Quem Somos/Rodrigo Gouveia.jpg" alt="" />
                     <p>
                         Num momento em que a sociedade está em desenlace, em que forças disruptivas falam mais alto e os contratos familiares, amorosos, profissionais são suplantados e colocados à mercê das flutuações dos prazeres e das pulsões, fortalecendo a rebeldia e a infidelidade;
                         aparece na sociedade projetos como o de Rodrigo Gouveia propondo um retorno ao laço. Com Teammind Black Round Table é possível o encontro, o laço, a troca. Pessoas unidas pelo mesmo ideal de construção, criação, com possibilidade
@@ -149,7 +149,7 @@
                     </header>
                     <ul class="contact">
                         <ul class="contact">
-                            <li class="icon solid fa-envelope"><a href="#">fabianaratti@gmail.com</a></li>
+                            <li class="icon solid fa-envelope"><a href="#">fabiana@fabianaratti.com.br</a></li>
                             <li class="icon solid fa-phone">(11) 99955-8857</li>
                             <li class="icon solid fa-home">R. Cônego Eugênio Leite, 933<br />conjunto 75 - Pinheiros
                                 <br /> São Paulo, CEP: 05414-012</li>
