correçoes nas paginas e formulario PHP

--- a/empresasParceiras.html
+++ b/empresasParceiras.html
@@ -128,8 +128,12 @@
                             <p>Compra, venda e restauro de peças novas e antigas. As histórias, as memórias, as heranças de nossos antepassados são relíquias que devem ser cuidadas, preservadas e fazer parte do dia a dia dos netos, bisnetos e tataranetos
                                 que hoje estão no século XXI. </p>
                             <p id="empresa7Texto" style="display: none;"> Conservar as raízes e a cultura de um povo, de uma nação, é mantê-la viva e, mesmo acompanhando as grandes conquistas científicas e a evolução tecnológica, podemos preservar um espaço para a arte e a cultura que veio antes
-                                de nós. Assim como as cidades modernas crescem por entre belas construções arquitetônicas históricas e preservadas, objetos novos e modernos merecem conviver lado a lado e fazer parte de nossas vidas... Não jogue fora.
-                                Preserve, restaure, mantenha um pedaço querido do passado, de sua história, ao seu lado. </p>
+                                de nós. Assim como as cidades modernas crescem por entre belas construções arquitetônicas históricas e preservadas, objetos novos e modernos merecem conviver lado a lado e fazer parte de nossas vidas... Não jogue fora.<br/>                                Preserve, restaure, mantenha um pedaço querido do passado, de sua história, ao seu lado. <br/> Ricardo Rodrigues, artista, historiador autodidata, empresário.<br/> Conhecedor de decoração de interiores, com noção de acabamento
+                                e conhecedor de materiais nobres, desde menino nos antiquários e leilões com os pais, colecionando selos brasileiros, foi pegando o gosto pelo colecionismo, pelas pratarias, porcelanas e cristais. Desde 2004, na parte comercial
+                                de Antiquário.<br/> E desde 2010 como restaurador passando por vários seguimentos como telefonia antiga, gramofones, balanças, militaria e algumas partes de mobília interna, se especializando em objetos técnicos antes da
+                                revolução industrial nas áreas: naval, locomotivas a vapor e laboratórios de física e astronomia. Revitalizando e deixando-as mais vistosas aos olhares dos entusiastas de plantão.<br/> Atualmente, em acréscimo, com boas
+                                ideias e material sucateado, vem projetando uma série de luminárias e pequenos objetos de decoração inspirado sempre na decoração industrial e steampunk não tanto vitoriano, mas com ares de arqueologia industrial. O ateliê,
+                                sempre regado a um bom set musical para acompanhar o restauro e as novas ideias de criação. </p>
                             <ul class="actions">
                                 <li><a id="empresa7Botao" class="button">Mais</a></li>
                             </ul>
@@ -166,11 +170,12 @@
                         fazer da terceira idade um momento de crescimento e conquistas.
                     </p>
                     <hr class="major" />
-                    <h3>Lucas Ratti
+                    <h3>Lucas Rosa
+                        <a href="https://www.instagram.com/lucasrosafans/?hl=pt-br" class="icon brands fa-instagram" target="_blank"></a>
                     </h3>
                     <img class="image" src="images/Quem Somos/lucas ratti.jpeg" alt="" />
                     <p>
-                        Lucas Ratti desde criança ama jogar futebol e essa paixão foi acolhida pelos pais que o levavam primeiro aos jogos e depois aos treinos. Então ele começou a se destacar e assim a vida no futebol passou a ficar ainda mais séria. Lucas, sempre muito responsável
+                        Lucas Rosa desde criança ama jogar futebol e essa paixão foi acolhida pelos pais que o levavam primeiro aos jogos e depois aos treinos. Então ele começou a se destacar e assim a vida no futebol passou a ficar ainda mais séria. Lucas, sempre muito responsável
                         com os estudos, conseguiu coadunar estudo, jogo e os encontros em família. Ele acredita que foi exatamente a estabilidade emocional e apoio que encontrou na família, a disciplina e a paixão pelo futebol que o levaram longe, hoje
                         jogando na Itália pela Juventus. Dessa forma, Lucas Rosa apoia instituições que trabalham por sonhos e projetos, acredita que cada brasileiro tem o direito de lutar com esforço e confiança pelas suas próprias conquistas. Fortalecimento
                         emocional e confiança pessoal são partes imprescindíveis para as conquistas e realização de sonhos.
