--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
-    <link rel="stylesheet" href="assets/css/cabecalho.css" />
 </head>
 
 <body class="is-preload">
@@ -18,12 +17,11 @@
 
                 <header id="header">
                     <div>
-                        <img src="images/UNBEWUSSTE.png" class="cabecalho-unbewusste">
-                        <img src="images/audio2.png" class="cabecalho-audio" onclick="document.getElementById('player').play()">
+                        <img src="images/UNBEWUSSTE.png" style="max-width: 20%;height: auto;align-items: center;margin-top: 1%;" style="margin-left: 2%">
+                        <img src="images/audio2.png" style="max-width: 5%;height: auto;align-items: center;margin-top: 1%;margin-bottom: 1%;margin-left:0.5%;" onclick="document.getElementById('player').play()">
                         <audio id="player" src="Audio/UNBEWUSSTE.mp3"></audio>
-                        <img src="images/ELEMENTO_.png" class="cabecalho-elemento">
-                        <img src="images/FABIANA RATTI PSICANALISTA.png" class="cabecalho-fabiana">
-
+                        <img src="images/ELEMENTO_.png" style="max-width: 10%;height: auto;align-items: center;margin-left: 21%;">
+                        <img src="images/FABIANA RATTI PSICANALISTA.png" style="margin-left: 22%;max-width: 20%;height: auto;align-items: center;">
                     </div>
                 </header>
                 <ul class="icons" style="float: right;">
@@ -50,6 +48,7 @@
                     </div>
                     <span class="image object">
 						<img src="images/index1.png" alt="" />
+						<a href="images/index1.png">acessar</a>mais
 					</span>
                 </section>
                 <section id="banner">
@@ -60,7 +59,8 @@
                         </header>
                         <p>
                             <b>Psicanalista:</b> Fabiana Ratti<br/> <b>Assistentes:</b> Jessica Olivieri e Guilherme Figueiredo<br/> Toda sexta feira – a partir de 6 de março de 2020 das 14h às 15:30h.<br/> Local: Rua Cônego Eugênio Leite, 933 cj 75.
-                            Pinheiros. SP.<br/> whtasapp: 11999558857<br/> insta: fabianaratti <br/>
+                            Pinheiros. SP.<br/> whtasapp: (11) 99955-8857<br/> insta:
+                            <a href="https://www.instagram.com/fabianaratti/?hl=pt-br" class="icon brands fa-instagram" target="_blank"></a>
                         </p>
                     </div>
                     <span class="image object">
@@ -81,18 +81,6 @@
                     <span class="image object">
 						<img src="images/index3.png" alt="" />
 					</span>
-                </section>
-                <section>
-                    <div>
-                        <header>
-                            <h3 style="color:#987F42;">Por que fazer análise? O Inconsciente - Fabiana Ratti, psicanalista</h3>
-                        </header>
-                        <object width="1024" height="768">
-							<param name="movie" value="http://www.youtube.com/v/uynh-G3xFig" />
-							<embed src="http://www.youtube.com/v/uynh-G3xFig" type="application/x-shockwave-flash"
-								width="1024" height="768" />
-						</object>
-                    </div>
                 </section>
             </div>
         </div>
