Acrescentando imagens index e pagina de missao

--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
                         </ul>
                     </div>
                     <span class="image object">
-						<img src="images/index1.png" alt="" />
-						<a href="images/index1.png">acessar</a>mais
+						<img src="images/grupo de estudos 2.jpg" alt="" />
 					</span>
                 </section>
                 <section id="banner">
@@ -64,7 +63,7 @@
                         </p>
                     </div>
                     <span class="image object">
-						<img src="images/index2.png" alt="" />
+						<img src="images/grupo de estudos 1.jpg" alt="" />
 					</span>
                 </section>
                 <section id="banner">
@@ -82,6 +81,21 @@
 						<img src="images/index3.png" alt="" />
 					</span>
                 </section>
+                <section>
+                    <div>
+                        <header>
+                            <h3 style="color:#987F42;">Por que fazer análise? O Inconsciente - Fabiana Ratti, psicanalista</h3>
+                        </header>
+                        <object width="1024" height="768">
+							<param name="movie" value="http://www.youtube.com/v/uynh-G3xFig"/>
+							<embed src="http://www.youtube.com/v/uynh-G3xFig" type="application/x-shockwave-flash"
+								width="1024" height="768" />
+						</object>
+                    </div>
+                </section>
+            </div>
+            <div style="text-align:center;">
+                <img src="https://hitwebcounter.com/counter/counter.php?page=7191741&style=0006&nbdigits=5&type=ip&initCount=0" title="Free-Counter" Alt="hitwebcounter" border="0">
             </div>
         </div>
 
@@ -108,6 +122,8 @@
                         <li><a href="acompanhanteTerapeutico.html">Acompanhante Terapêutico</a></li>
                         <li><a href="parceria.html">Trabalhe em parceria conosco</a></li>
                         <li><a href="atendimento.html">Inscreva-se para ser atendido</a></li>
+                        <li><a href="missaoVisaoValor.html">Missão|Visão|Valor</a></li>
+                        <li><a href="missaoVisaoValor.html">Missão|Visão|Valor</a></li>
                     </ul>
                 </nav>
 
