--- a/missaoVisaoValor.html
+++ b/missaoVisaoValor.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>UNBEWUSSTE - Psicanalista parceiro</title>
+    <title>Missão|Visão|Valores</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -35,31 +35,32 @@
                 </ul>
 
                 <section>
-                    <header class="main">\
-                        <h1>Psicanalista parceiro</h1>
-                    </header>
-                    <header>
-                        <h3 style="color:#987F42;">Rede de atendimento para psicanalistas<br /></h3><br /><br />
-                    </header>
-                    <p>
-                        UNBEWUSSTE é uma clínica de psicanálise onde teremos o entrecruzamento borromeano de Redes de atendimento psicanalítico. Como psicanalista, nesses 20 anos de formada fui atendendo pessoas que foram me encaminhando pacientes, analisantes, o boca a boca
-                        foi acontecendo... Mas os horários vão encavalando, não consigo atender a todos, então decidimos formalizar esses encaminhamentos e assim eu supervisiono psicanalistas, eles atendem na mesma qualidade e dedicação que eu. A primeira
-                        Rede que estamos montando é a de empresários e pessoas que trabalham em empresa. Tudo é discutido na posição de sujeito, na singularidade de cada um, no estilo e universo da pessoa.<br /><br /> Os psicanalistas
-                        que quiserem trabalhar com esse público, que estão dispostos a estudar, a discutir casos clínicos, a fazer supervisão, entrem em contato. <br /><br /> Algumas pessoas desse público são expatriadas, estrangeiros que estão trabalhando
-                        em empresas no BR por um período. Dessa forma, também precisamos de psicanalistas que atendam em outra língua... francês, inglês, espanhol... temos dificuldade de encaminhar quando a pessoa gostaria de falar em outro idioma. <br
-                        /><br /> Outras Redes serão montadas de acordo com a procura. Atendemos crianças, adolescentes, adultos, terceira idade. À medida que esta procura for excedendo, vamos aumentando o número de Redes UNBEWUSSTE borromeana. Envie seu
-                        CV se você quer ser um psicanalista da Ubewusste Cada profissional fica no seu consultório e recebe pacientes/analisantes fazendo supervisão e grupo de estudos na Ubewusste. <br /><br /> Todos os CVs serão lidos, mas somente serão
-                        chamados para uma entrevista de acordo com a necessidade da Ubewusste. <br /><br /> Caso queiram participam podem aparecer no grupo de estudos que acontece.... Agradecemos o contato, o envio do CV e esperamos que possamos trabalhar
-                        futuramente juntos.
-                        <br /><br />
-
-                    </p>
+                    <h4 style="color:#987F42;">Missão</h4>
+                    <div>
+                        <p>
+                            Levar a psicanálise ao maior número possível de pessoas através de atendimentos, debates, grupos de estudo, discussões em escolas, supervisões, congressos, aulas, aulas virtuais, postagens em redes sociais, blogs. Promover amplo conhecimento sobre psicanálise
+                            e estimular a busca por análise assim como pela inclusão da saúde mental na vida das pessoas. Contribuir para a formação de psicanalistas juntamente com a transmissão da ideia de que o inconsciente existe para todos e de que
+                            sintomas psíquicos têm tratamento.
+                        </p>
+                    </div>
                     <hr class="major" />
-                    <object width="1024" height="768">
-						<param name="movie" value="http://www.youtube.com/v/4t1K3CxyACw&t" />
-						<embed src="http://www.youtube.com/v/4t1K3CxyACw&t" type="application/x-shockwave-flash"
-							width="1024" height="768" />
-					</object>
+                    <h4 style="color:#987F42;">Visão</h4>
+                    <div>
+                        <p>
+                            A UNBEWUSSTE visa montar Redes de atendimento para tratamento psicanalítico individual. A primeira Rede é focada no público do mercado corporativo e as outras serão montadas a partir da demanda que for aparecendo.
+                        </p>
+                    </div>
+                    <hr class="major" />
+                    <h4 style="color:#987F42;">Valores</h4>
+                    <div>
+                        <p>
+                            Manter alto padrão de qualidade entre os profissionais ligados à rede. Garantir atendimento personalizado, efetivo e significativo na vida de cada pessoa em tratamento. Seguir com rigor a ética da psicanálise lacaniana: ética do “bem dizer” e não a do
+                            “bem estar”, interrogando e discutindo pontos importantes para o sujeito para que cada um busque enfrentar seus obstáculos e desafios e assim chegar a um outro patamar de conquistas e realizações na vida.
+                        </p>
+                    </div>
+                    <hr class="major" />
+
+                </section>
             </div>
         </div>
 
@@ -94,12 +95,9 @@
                         <h2>Contato</h2>
                     </header>
                     <ul class="contact">
-                        <ul class="contact">
-                            <li class="icon solid fa-envelope"><a href="#">fabiana@fabianaratti.com.br</a></li>
-                            <li class="icon solid fa-phone">(11) 99955-8857</li>
-                            <li class="icon solid fa-home">R. Cônego Eugênio Leite, 933<br />conjunto 75 - Pinheiros
-                                <br /> São Paulo, CEP: 05414-012</li>
-                        </ul>
+                        <li class="icon solid fa-envelope"><a href="#">fabiana@fabianaratti.com.br</a></li>
+                        <li class="icon solid fa-phone">(11) 99955-8857</li>
+                        <li class="icon solid fa-home">R. Cônego Eugênio Leite, 933<br />conjunto 75 - Pinheiros<br /> São Paulo, CEP: 05414-012</li>
                     </ul>
                 </section>
 
