--- a/redeAtendimento.html
+++ b/redeAtendimento.html
@@ -138,6 +138,7 @@
                         <li><a href="acompanhanteTerapeutico.html">Acompanhante Terapêutico</a></li>
                         <li><a href="parceria.html">Trabalhe em parceria conosco</a></li>
                         <li><a href="atendimento.html">Inscreva-se para ser atendido</a></li>
+                        <li><a href="missaoVisaoValor.html">Missão|Visão|Valor</a></li>
                     </ul>
                 </nav>
                 <section>
